--- a/css/style.css
+++ b/css/style.css
@@ -3,10 +3,10 @@
 }
 .box {
     width: 100%;
-    height: 200px;
+    height: 500px;
     background: orange;
     color: white;
-    padding: 30px;
+    margin-bottom: 30px;
 }
 @media screen and (max-width: 600px) {
     .box {
