--- a/css/style.css
+++ b/css/style.css
@@ -2,11 +2,12 @@
     box-sizing: border-box;
 }
 .box {
+    display: flex;
     width: 100%;
     background: orange;
     color: white;
     margin-bottom: 30px;
-    text-align: center;
+    
 }
 @media screen and (max-width: 600px) {
     .box {
