img 부모 art에 css

--- a/css/style.css
+++ b/css/style.css
@@ -12,8 +12,13 @@ body {
     
 }
 .art {
+    width : 400px;
+    height : 400px;
 }
 .img {
+    width : 100%;
+    height : 100%;
+    object-fit: cover;
     vertical-align: top;
 
 }
