--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,10 @@ body {
     
 }
 .art {
-    width : 400px;
-    height : 400px;
+    width : 300px;
+    height : 300px;
 }
-.img {
+.image {
     width : 100%;
     height : 100%;
     object-fit: cover;
