--- a/css/style.css
+++ b/css/style.css
@@ -12,13 +12,13 @@ body {
     
 }
 .art {
-    width : 300px;
+    width : 500px;
     height : 800px;
 }
 .image {
     width : 100%;
     height : 100%;
-    object-fit: cover;
+    object-fit: contain;
     vertical-align: top;
 
 }
