--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 .box {
-    text-align: center;
+
     width: 100%;
     background: orange;
     color: white;
@@ -20,6 +20,8 @@ body {
     height : 100%;
     object-fit: contain;
     vertical-align: top;
+    display: inline-block;
+    margin-right: 10px;
 
 }
 @media screen and (max-width: 600px) {
