--- a/css/style.css
+++ b/css/style.css
@@ -12,18 +12,14 @@ body {
     
 }
 .art {
-    display : flex;
-    align-items : flex-start;
     width : 700px;
     height : 1000px;
 }
 .image {
     width : 100%;
     height : 100%;
-    object-fit: contain;
+    object-fit: cover;
     vertical-align: top;
-    display: inline-block;
-    margin-right: 10px;
 
 }
 @media screen and (max-width: 600px) {
