--- a/css/style.css
+++ b/css/style.css
@@ -11,6 +11,12 @@ body {
     color: white;
     
 }
+.ad {
+
+    width: 750px;
+    height:100px;
+
+}
 .art {
     width : 700px;
     height : 1000px;
