--- a/css/style.css
+++ b/css/style.css
@@ -8,13 +8,13 @@ body {
 
     width: 100%;
     background: orange;
-    color: white;
+    color: orange;
     
 }
 .ad {
     background: orange;
-    width: 750px;
-    height:100px;
+    width: 728px;
+    height:90px;
 
 }
 .art {
