--- a/css/style.css
+++ b/css/style.css
@@ -5,39 +5,36 @@ body {
     margin: 0;
 }
 .box {
-
-    width: 100%;
+    padding : 150px;
     background: orange;
-    color: orange;
-    
+    color: black;
+}
+.art {
+    border: 5px solid pink;
+    width : 100%;
+}
+.image {
+    width : 100%;
+    height : 100%;
+
+}
+.comment{
+    padding : 20px;
+    text-align : center;
 }
 .ad {
     background: orange;
     width: 728px;
     height:90px;
-
 }
-.art {
-    width : 700px;
-    height : 1000px;
-}
-.image {
-    width : 100%;
-    height : 100%;
-    object-fit: cover;
-    vertical-align: top;
-}
-.comment{
-    text-align: center;
-}
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 1500px) {
     .box {
-        background: dodgerblue;
+
     }
 }
-@media screen and (min-width: 601px) {
+@media screen and (max-width: 601px) {
     .container {
-        flex-direction: column;
+
     }
     .footerBox1 {
        
