--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@ body {
     margin: 0;
 }
 .box {
-    padding : 150px;
+    padding : 20px;
     background: orange;
     color: black;
 }
@@ -16,7 +16,7 @@ body {
 .image {
     width : 100%;
     height : 100%;
-
+    vertical-align : top;
 }
 .comment{
     padding : 20px;
