--- a/css/style.css
+++ b/css/style.css
@@ -3,20 +3,24 @@
 }
 body {
     margin: 0;
+    background: orange;
 }
 .box {
     padding : 20px;
     background: orange;
     color: black;
+
 }
 .art {
     border: 5px solid pink;
     width : 100%;
+    object-fit :cover;
 }
 .image {
     width : 100%;
     height : 100%;
     vertical-align : top;
+
 
 }
 .comment{
@@ -28,15 +32,14 @@ body {
     width: 728px;
     height:90px;
 }
-@media screen and (max-width: 1500px) {
-    .box {
-
-    }
+@media screen and (min-width: 1024px) {
+   .box {
+       width : 50%;
+       float : left;
+   }
 }
-@media screen and (max-width: 601px) {
-    .container {
+@media screen and (max-width: 768px) {
 
-    }
     .footerBox1 {
        
     }
